[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tv_scraper"
version = "1.0.0"
description = "A powerful Python library for scraping real-time market data, indicators, and ideas from TradingView."
authors = [
    {name = "Smit Kunpara", email = "smitkunpara@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
keywords = ["tradingview", "scraper", "python", "finance", "market-data", "technical-analysis", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.32.4",
    "websocket-client>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
]

# test extra used by CI workflows (uv sync --extra test)
test = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "ruff>=0.1.6",
]

csv = [
    "pandas>=2.0.3",
]

[project.urls]
Homepage = "https://github.com/smitkunpara/tv-scraper"
Repository = "https://github.com/smitkunpara/tv-scraper"
Issues = "https://github.com/smitkunpara/tv-scraper/issues"

[tool.hatch.build.targets.wheel]
packages = ["tv_scraper"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PL", "RUF"]
# Ignore non-critical style warnings:
# E501: Line too long (acceptable in docstrings and long strings)
# PLR0913: Too many arguments (acceptable for API methods)
# PLR2004: Magic value comparison (acceptable for HTTP status codes)
# PLR0911: Too many return statements (acceptable for validation logic)
# PLR0912: Too many branches (acceptable for complex business logic)
# RUF012: Mutable class attributes (acceptable for class-level constants)
# PLC0415: Import outside top-level (acceptable for optional dependencies)
ignore = ["E501", "PLR0913", "PLR2004", "PLR0911", "PLR0912", "RUF012", "PLC0415"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
exclude = ["tests/", "temp/", "site/", "docs/"]

[tool.pytest.ini_options]
addopts = "-v --cov=tv_scraper --cov-report=term-missing"
testpaths = ["tests"]
markers = [
    "live: marks tests that require live network connections to TradingView (deselect with '-m \"not live\"')",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]
